Make new feature for upload picture from gallery

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="https">https://</string>
     <string name="headset_is_unplagged">Headset is unplugged</string>
     <string name="headset_is_plugged">Headset is plugged</string>
+    <string name="change_photo">Change Photo</string>
 
     <string-array name="group_list">
         <item>Винник Владислав</item>
