--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="call_me">"Call me "</string>
     <string name="number">Number</string>
     <string name="name">Name</string>
+    <string name="storage_denied">Storage Permissions denied.</string>
 
     <string-array name="group_list">
         <item>Винник Владислав</item>
