--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="name">Name</string>
     <string name="storage_denied">Storage Permissions denied.</string>
     <string name="search">Search</string>
+    <string name="search_hint">Search</string>
 
     <string-array name="group_list">
         <item>Винник Владислав</item>
